Switch to immutable list